# modern-ml-course

./: .gitignore  README.md  course_outline.md  features.txt  hello_world.ipynb  pyproject.toml  requirements.lock.txt  requirements.txt
case/instructions/: case_overview.md
case/notebooks/: 1_exploratory_data_analysis.ipynb  2_feature_selection.ipynb  3_hyperparam_tunning.ipynb  4_final_prediction.ipynb  first_look.ipynb
case/prompts/: 2_creat_the_case_instructions.md  3_download_data_from_google_drive.md  4_select_features.md
case/scripts/: donwload_raw_lending_club_dataset.py  download_google_files.py
docs/: todo_list.md
documents/: references.md
global_code/: util.py
instructions/: env_configuration.md
prompts/: configure_the_python_env.md
scripts/: teste_script.py
week_1/challange/: challange.md
week_1/diagrams/: 1_split_and_churn_definition.excalidraw
week_1/notebooks/: 1_dataset_first_look.ipynb  2_define_churn.ipynb  3_feature_engineering.ipynb  4_sample_date_split.ipynb  5_feature_selection.ipynb  6_tuning.ipynb  7_calibration.ipynb  9_generate_full_training.ipynb  map_jobs_to_categories.py
week_1/prompts/: 10_summary_week_1_content.md  1_2_dowload_google_driver_data.md  1_download_churn_dataset_from_kaggle.md  2_create_the_intial_notebook.md  3_define_churn.md  4_feature_engineering.md  5_clusterize_jobs.md  6_explode_touchpoint_column.md  7_generate_train_notebook copy.md  8_generate_calibration_notebook.md  9_generate_full_training.md
week_1/scripts/: download_preproceced_data.py  download_raw_kaggle_churn_datasets.py
(+7 files in other folders)
