[project]
name = "modern-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "pandas",
    "catboost",
    "seaborn",
    "shap",
    "optuna",
    "mlflow",
    "nixtla",
    "mapie",
    "arfs",
    "kaggle",
    "notebook>=7.3.2",
    "fasttreeshap>=0.1.6",
    "tqdm>=4.67.1",
    "venn-abers>=1.4.6",
    "kagglehub>=0.3.6",
]
